Add S3-hosted dashboard instructions and base path support

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <title>Valkey Continuous Benchmark</title>
 
+  <!-- Pass ?base=PREFIX to load metrics from a subdirectory -->
+
   <!-- Tailwind for quick styling -->
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/tailwindcss@3/dist/tailwind.min.css"/>
