--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -12,6 +12,7 @@
   <!-- React & Recharts (UMD bundles) -->
   <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/prop-types/prop-types.min.js"></script>
   <script src="https://unpkg.com/recharts/umd/Recharts.js"></script>
 
   <!-- Your app -->
