--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,32 +18,14 @@
   <!-- Your app -->
   <script defer src="app.js"></script>
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col">
+<body class="bg-gray-50 min-h-screen flex flex-col items-center">
 
-  <header class="bg-gray-900 text-white p-4 text-xl font-semibold">
-    Valkey Continuous Benchmark
+  <header class="bg-gray-900 text-white p-4 w-full text-center">
+    <h1 class="text-2xl font-bold">Valkey Continuous Benchmark</h1>
   </header>
 
-  <!-- Controls -->
-  <section class="p-4 flex gap-4 flex-wrap items-center">
-    <label class="font-medium">
-      Commit:
-      <select id="commitSelect" class="border rounded p-1 ml-2"></select>
-    </label>
-
-    <label class="font-medium">
-      Metric:
-      <select id="metricSelect" class="border rounded p-1 ml-2">
-        <option value="rps">rps</option>
-        <option value="avg_latency_ms">avg_latency_ms</option>
-        <option value="p95_latency_ms">p95_latency_ms</option>
-        <option value="p99_latency_ms">p99_latency_ms</option>
-      </select>
-    </label>
-  </section>
-
   <!-- Chart placeholder -->
-  <main id="chartRoot" class="flex-1 p-4"></main>
+  <main id="chartRoot" class="flex-1 p-4 w-full"></main>
 
 </body>
 </html>
