Center header and controls

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -23,12 +23,12 @@
 </head>
 <body class="bg-gray-50 min-h-screen flex flex-col items-center">
 
-  <header class="bg-gradient-to-r from-red-700 to-purple-700 text-white p-6 w-full text-center shadow">
-    <h1 class="text-3xl font-bold">Valkey Continuous Benchmark</h1>
+  <header class="bg-gradient-to-r from-red-700 to-purple-700 text-white p-6 w-full shadow flex justify-center">
+    <h1 class="text-3xl font-bold text-center">Valkey Continuous Benchmark</h1>
   </header>
 
   <!-- Chart placeholder -->
-  <main id="chartRoot" class="flex-1 p-4 w-full"></main>
+  <main id="chartRoot" class="flex-1 p-4 w-full flex flex-col items-center"></main>
 
 </body>
 </html>
